# typstr

./: .gitignore  Makefile  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tools/: dev_server.py
web/: app.js  index.html  styles.css
