[package]
name = "typstr"
version = "0.1.0"
description = "A simple Typst editor"
authors = ["typstr contributors"]
edition = "2021"

[lib]
name = "typstr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

